add_subdirectory(entry)
add_subdirectory(config)
add_subdirectory(commands)
add_subdirectory(network)
add_subdirectory(blocks)
add_subdirectory(items)
add_subdirectory(recipes)
add_subdirectory(entity)
add_subdirectory(playerui)
add_subdirectory(world)
add_subdirectory(zlibpp)
add_subdirectory(platform)
add_subdirectory(runmanager)
add_subdirectory(script)
